Fix: Form Field Alignment

--- a/components/AuthLayout/AuthLayout.module.scss
+++ b/components/AuthLayout/AuthLayout.module.scss
@@ -2,6 +2,7 @@
 @import 'styles/variable.scss';
 
 .AuthLayout {
+  min-height: 100vh;
   height: 100%;
   width: 100%;
   background-color: $lightgrey-3;
