--- a/pages/change-password/ChangePassword.module.scss
+++ b/pages/change-password/ChangePassword.module.scss
@@ -16,7 +16,6 @@
 
   &FormInput {
     width: 100%;
-    // margin-bottom: 30px;
     font-size: 10px;
   }
 
@@ -31,7 +30,7 @@
 
   &FormButton {
     width: 100%;
-    margin-top: 40px;
+    margin-top: 40px !important;
   }
 
   &Success {
